[package]
name = "webexample003"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" , features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1" , features = ["full"]}
urlencoding = "2.1"
warp = "0.3"
anyhow = "1.0"
log = "0.4"
oauth2 = { version = "4.4" , default-features = false, features = ["reqwest","rustls-tls"]}
pretty_env_logger = "0.5"
url = "2.4"
reqwest = { version = "0.11", optional = true, default-features = false, features = ["blocking"] }
warp-sessions = "1.0"
